# release-pillar-mapper

./: AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
config/: brief_corpus.yaml  repo_index.yaml  significance.yaml  thesis_pillars.yaml
docs/: first-pr.md  product-brief.md  system-map.md
examples/_events/: 2026-04-01-example-frontier-agent-model.json
release_pillar_mapper/: __init__.py  __main__.py  _impl.py  cli.py  io.py  mapper.py  model.py  render.py  schema.py  scoring.py  significance.py
releases/: 2026-04-01-example-frontier-agent-model.md
reports/: 2026-04-01-example-frontier-agent-model.jsonl
schemas/: backscore.schema.json  impact_map.schema.json  release_event.schema.json
scripts/: spec_check.py  validate_release_event.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  ledger.md  requirements.md  tasks.md
src/release_mapper/: __init__.py  cli.py  io.py  model.py  render.py  schema.py
src/release_pillar_mapper/: __init__.py  __main__.py  cli.py  io.py  model.py  render.py  schema.py  scoring.py  significance.py
tests/: test_cli.py  test_contracts.py  test_render_roundtrip.py  test_schema.py  test_significance.py
