[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "release-pillar-mapper"
version = "0.1.0"
description = "Map one frontier release against repo, brief, and thesis-pillar impact axes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vignesh" }]
dependencies = []

[project.scripts]
release-mapper = "release_pillar_mapper.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
